src/features/file-system/assets/_Sidebar.scss
@use 'src/assets/global';

.sidebar-container {
	position: relative;
	background: var(--bg-base);
	border-right: 1px solid var(--border);
	padding: 1rem 0.5rem;
	min-width: 350px;
	user-select: none;
	z-index: 10;

	height: 100%;

	display: flex;
	flex-direction: column;
	justify-content: space-between;
	row-gap: 0.5rem;

	@media not all and (min-width: 1024px) {
		padding: 0.5rem;

		position: absolute;
		top: 0;
		left: 0;
		height: 100%;
		transition: transform 300ms ease;
		box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.25);

		&.hide {
			transform: translateX(-100%);
		}
	}

	@media not all and (min-width: 640px) {
		width: 100%;
		border-right: none;
	}
}

